[tool.poetry]
name = "microblog"
version = "0.1.0"
description = ""
authors = ["bugman"]

[tool.poetry.dependencies]
python = "^3.6"
Flask = "^2.0.1"
SQLAlchemy = "^1.4.23"
Flask-SQLAlchemy = "^2.5.1"
Flask-Bootstrap = "^3.3.7"
Flask-Mail = "^0.9.1"
Flask-Migrate = "^3.1.0"
Flask-Login = "^0.5.0"
Flask-HTTPAuth = "^4.4.0"
PyJWT = "^2.1.0"
WTForms = "^2.3.3"
Flask-WTF = "^0.15.1"
email-validator = "^1.1.3"
python-dotenv = "^0.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
